# cherry

./: .env.example  .gitignore  deploy.ps1  deploy.sh  docker-compose.crawler.yml  docker-compose.yml  setup.sh  start-frontend.ps1
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .dockerignore  Cherry.slnx  Dockerfile  NuGet.config  mock_data.sql  nuget.config
cherry-picker/: Dockerfile  README.md  go.mod
docs/: architecture.md  crawler-benchmarking.md  crawler-experiment-ledger.md  full-chain-audit-2026-07-19.md  global-optimization-framework.md  heat-storage-design.md  storage-architecture.md  storage-search-optimization-ledger.md
frontend/: app.js  index.html  nginx.conf  style.css
migration/: package-lock.json
scripts/: auto-tune.sh  backup-storage.sh  backup.sh  crawler-baremetal.sh  healthcheck.sh  import-remote.sh  init-cuckoo-volume.sh  merge-cloud-db.ps1  migration-guide.md  preflight-heat-spool-v2.sh  restore.sh  run-crawler-abab.sh  run-crawler-benchmark.sh  setup-crawler-server.sh  setup-storage-server.sh  storage-backup-common.sh  storage-secret-privacy-gate.sh  sync-meilisearch.js  tune-crawler-os.sh  upload-storage-wal.sh  verify-storage-backup.sh
spider/: .gitignore  cherry-spider.js  ecosystem.config.js  index.js  spider-run.sh  spider.js
spider-references/dht-spider-main/: Cargo.toml  README.md
spider-references/dht-spider-main/src/: bencode.rs  bitmap.rs  blacklist.rs  command.rs  dht.rs  krpc.rs  lib.rs  main.rs  peers.rs  routing.rs  token.rs  transaction.rs  types.rs  util.rs  wire.rs
(+319 files in other folders)
